feat: Implement UI table component with filtering and sorting, and enhance stats display with long/short breakdowns.

--- a/index.html
+++ b/index.html
@@ -282,23 +282,49 @@
     <div class="stats-row">
         <div class="stat">
             <div class="stat-label">Whales Found</div>
-            <div class="stat-value blue" id="sWhales">—</div>
+            <div class="stat-main">
+                <div class="stat-value blue" id="sWhales">—</div>
+            </div>
+            <div class="stat-sub">
+                <span class="stat-sub-item long" id="sWhalesLong">—</span>
+                <span class="stat-sub-item short" id="sWhalesShort">—</span>
+            </div>
         </div>
         <div class="stat">
             <div class="stat-label">Total Positions</div>
-            <div class="stat-value" id="sPositions">—</div>
+            <div class="stat-main">
+                <div class="stat-value" id="sPositions">—</div>
+            </div>
+            <div class="stat-sub">
+                <span class="stat-sub-item long" id="sPositionsLong">—</span>
+                <span class="stat-sub-item short" id="sPositionsShort">—</span>
+            </div>
         </div>
         <div class="stat">
             <div class="stat-label">Total Capital</div>
-            <div class="stat-value green" id="sCapital">—</div>
+            <div class="stat-main">
+                <div class="stat-value green" id="sCapital">—</div>
+            </div>
+            <div class="stat-sub">
+                <span class="stat-sub-item long" id="sCapitalLong">—</span>
+                <span class="stat-sub-item short" id="sCapitalShort">—</span>
+            </div>
         </div>
         <div class="stat">
             <div class="stat-label">Total UPNL</div>
-            <div class="stat-value" id="sUpnl">—</div>
+            <div class="stat-main">
+                <div class="stat-value" id="sUpnl">—</div>
+            </div>
+            <div class="stat-sub">
+                <span class="stat-sub-item long" id="sUpnlLong">—</span>
+                <span class="stat-sub-item short" id="sUpnlShort">—</span>
+            </div>
         </div>
         <div class="stat">
             <div class="stat-label">Largest Wallet</div>
-            <div class="stat-value gold" id="sLargest">—</div>
+            <div class="stat-main">
+                <div class="stat-value gold" id="sLargest">—</div>
+            </div>
         </div>
     </div>
 
