--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
         }
 
         .floating-agg-btn {
-            position: absolute;
+            position: fixed;
+            /* Changed from absolute to fixed */
             bottom: 40px;
             right: 24px;
             z-index: 20000;
@@ -187,6 +188,7 @@
             height: 50px;
             border-radius: 50%;
             display: flex;
+            /* Always flex */
             align-items: center;
             justify-content: center;
             font-size: 22px;
@@ -196,6 +198,9 @@
             backdrop-filter: var(--glass-blur-sm);
             -webkit-backdrop-filter: var(--glass-blur-sm);
             overflow: hidden;
+            visibility: visible !important;
+            /* Force visibility */
+            opacity: 1 !important;
         }
 
         .floating-agg-btn::before {
@@ -228,10 +233,8 @@
 
 <body>
 
-    <!-- Floating Exit Zen Button -->
-    <button class="zen-toggle-floating" id="exitZenBtn">
-        <span>Exit Zen Mode 🪟</span>
-    </button>
+    <!-- Floating Agg Button -->
+    <button id="scrollToCurrentBtn" class="floating-agg-btn" title="Ir para Preço Atual">🎯</button>
 
     <!-- App Scripts -->
     <div class="splash-screen" id="splashScreen">
@@ -350,6 +353,10 @@
                     <div class="tabs">
                         <button class="tab active" id="btnShowSymDesktop" title="Mostrar">On</button>
                     </div>
+                </div>
+                <div class="ctrl" style="flex-direction: row; justify-content: space-between; align-items: center;">
+                    <label title="Exibir símbolos ($, ₿) na tabela de agregação">Show Symbols (Agg)</label>
+                    <input type="checkbox" id="showAggSymbolsDrawer" checked style="width: 20px; min-height: 20px;">
                 </div>
                 <div class="ctrl">
                     <label>Top N by Market Cap</label>
@@ -484,6 +491,33 @@
                     <input type="number" id="aggIntervalDesktop" class="js-agg-interval" value="50" min="10" step="10"
                         style="width:80px" title="Tamanho da faixa de agregação em dólares para o preço do BTC">
                 </div>
+                <div class="ctrl">
+                    <label>Aggregation Colors</label>
+                    <div style="display:grid; grid-template-columns: 1fr 1fr; gap:8px; margin-top:4px">
+                        <div style="display:flex; flex-direction:column; gap:2px">
+                            <span style="font-size:10px; color:#22c55e">Compra Forte</span>
+                            <input type="color" id="colorAggBuyStrong" class="js-agg-color-buy-strong" value="#22c55e">
+                        </div>
+                        <div style="display:flex; flex-direction:column; gap:2px">
+                            <span style="font-size:10px; color:#4ade80">Compra Normal</span>
+                            <input type="color" id="colorAggBuyNormal" class="js-agg-color-buy-normal" value="#4ade80">
+                        </div>
+                        <div style="display:flex; flex-direction:column; gap:2px">
+                            <span style="font-size:10px; color:#ef4444">Venda Forte</span>
+                            <input type="color" id="colorAggSellStrong" class="js-agg-color-sell-strong"
+                                value="#ef4444">
+                        </div>
+                        <div style="display:flex; flex-direction:column; gap:2px">
+                            <span style="font-size:10px; color:#f87171">Venda Normal</span>
+                            <input type="color" id="colorAggSellNormal" class="js-agg-color-sell-normal"
+                                value="#f87171">
+                        </div>
+                        <div style="display:flex; flex-direction:column; gap:2px; grid-column: span 2">
+                            <span style="font-size:10px; color:#facc15">Destaque Preço Atual</span>
+                            <input type="color" id="colorAggHighlight" class="js-agg-color-highlight" value="#facc15">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -585,7 +619,6 @@
             </svg>
         </div>
         <div class="section-content" id="aggSectionContent" style="position:relative;">
-            <button id="scrollToCurrentBtn" class="floating-agg-btn" title="Ir para Preço Atual">🎯</button>
             <div class="agg-stats-bar"
                 style="display:flex; gap:12px; padding:8px 16px; background:var(--panel-bg); border-bottom:1px solid var(--border-color); font-size:12px; flex-wrap:wrap; align-items:center; justify-content: space-between;">
                 <div id="aggStatsBar" style="display:flex; gap:12px; flex-wrap:wrap; align-items:center;">
